# geopolitics-reading-glass

./: CLAUDE.md  CommentsClassification.ipynb  DataAnalyze.ipynb  DataCollection.ipynb  README.md  cluster-summaries.ipynb  pyproject.toml
data/: all_relevant_comments.csv  comments_classified.csv  comments_classified.pkl  df_low_engagement.csv  output.json  reasoning_all_results.pkl  video_transcript.md  youtube_comments.csv
