[project]
name = "comments-disection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "dspy>=3.0.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
